--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,72 @@
-form.signup,
-form.login {
-  margin-top: 50px;
+body {
+  margin: 0;
+  padding: 0;
+  background: #555;
+  font-family: "Raleway", sans-serif;
+}
+
+.box {
+  background: rgb(245, 230, 218);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 600px;
+  height: 400px;
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  padding: 123px;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.about h1 h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
+.figure {
+  width: 100%;
+  height: 100%;
+}
+
+.figure:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-image: url("../img/homepage.png");
+  background-size: cover;
+  transform-origin: bottom;
+  transition: 0.5s;
+}
+
+.box:hover .figure:before {
+  transform: rotateX(90deg) translateY(50%);
+}
+
+.figure:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-image: url("../img/homepage.png");
+  background-size: cover;
+  transform-origin: top;
+  transition: 0.5s;
+  background-position: 300px;
+}
+
+.box:hover .figure:after {
+  transform: rotateX(90deg) translateY(-50%);
 }
