--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,12 +23,10 @@ body {
   top: 50%;
   transform: translateY(-50%);
 }
-
-.about h1 h2 {
+h5{
   margin: 0;
   padding: 0;
-  font-size: 30px;
-  text-transform: uppercase;
+  font-size: 1.7rem;
 }
 
 .figure {
@@ -69,4 +67,24 @@ body {
 
 .box:hover .figure:after {
   transform: rotateX(90deg) translateY(-50%);
+}
+.input,
+.submit {
+    display: inline-block;
+    padding: 10px 15px;
+    font-size: 20px;
+    border-radius: 0;
+    -webkit-appearance: none;
+}
+
+.input {
+    border: 1px solid lightgray;
+}
+
+.submit {
+    background-color: #dee4de;
+    border: 1px solid transparent;
+}
+.submit::-moz-focus-inner { 
+    border: 0;
 }
