--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   background: #555;
 }
+a{
+  color: #000000;
+}
 
 .box {
   background: rgb(245, 230, 218);
@@ -14,32 +17,48 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.logo {
+.search {
   padding: 123px;
   color: (110, 110, 110);
   text-align: center;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
+  margin-top: 5rem;
 }
 h1{
   color: (110, 110, 110);
   text-align: center;
   font-family: 'Lilita One';
-  margin-right: 6vh;
-  margin-top: 4vh;
 }
-h3{
+.title{
+  margin-top: -18vh;
+}
+.widget1{
   color: (110, 110, 110);
-  text-align: center;
-  font-family: 'Sue Ellen Francisco';
+  text-align: right;
+  font-family: 'Lato';
+  margin-top: -29vh;
+  font-size: xx-large;
+  float: left;
 }
+.widget2{
+  color: (110, 110, 110);
+  text-align: left;
+  margin-top: -24vh;
+  float: left;
+  font-family: 'Sue Ellen Francisco';
+  font-size: xx-large;
+}
+
 h4{
   color: (110, 110, 110);
   text-align: center;
   font-family: 'Lilita One';
 }
- 
+.links{
+  float: right;
+}
 
 
 
@@ -86,8 +105,6 @@ h4{
 
 
 
-
-
 /* zip code box */
 .input,
 .submit {
@@ -112,88 +129,39 @@ h4{
 
 
 
-
-
 /* Spinning Widget */
-section {
-  overflow: hidden;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.full-screen {
-  height: 100%;
-  margin-left: 4vh;
-  margin-bottom: -3vh;
-}
-.wheel-svg {
-  perspective: 300px;
-  margin: 0 auto;
-  margin-left: 2vh;
-  margin-bottom: 2vh;
-}
-.wheel-svg .term {
-  font-family: GothamLight, sans-serif;
-  font-size: 100px;
-  letter-spacing: -1px;
-  fill: rgb(110, 110, 110);
-  opacity: 0;
-}
-.wheel-svg .term {
-  opacity: 1;
-}
-/* .wheel-svg .term.term03 {
-  opacity: 1;
-}
-.wheel-svg .term.term02,
-.wheel-svg .term.term04 {
-  opacity: 0.5;
-}
-.wheel-svg .term.term01,
-.wheel-svg .term.term05 {
-  opacity: 0.2;
-} */
-
-.wheel-03 {
-  position: relative;
-}
-
-.overlays {
+.text {
   position: absolute;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  z-index: 5;
+  width: 0 auto;
+  left: 20%;
+  height: 40px;
+  top: 50%;
+  margin-top: -20px;
 }
 
-.overlay {
-  height: 100%;
-  width: 100%;
-  background-color: rgb(245, 230, 218);
-}
-
-.overlay.none {
+.word {
+  position: absolute;
+  width: 250px;
   opacity: 0;
+  color: black;
 }
 
-.o75 {
-  opacity: .75;
+.letter {
+  display: inline-block;
+  transform: translateZ(25px);
+  transform-origin: 50% 50% 25px;
 }
 
-.o35 {
-  opacity: .5;
+.letter.out {
+  transform: rotateX(90deg);
+  transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
+.letter.behind {
+  transform: rotateX(-90deg);
+}
 
-
-
-
-/*Map
- /* Set the size of the div element that contains the map */
- #map {
-  height: 200px; /* The height is 400 pixels */
-  width: 400px; /* The width is the width of the web page */
-  margin-top: 1rem;
+.letter.in {
+  transform: rotateX(0deg);
+  transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
