--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   background: #555;
 }
-a{
+a {
   color: #000000;
 }
 
@@ -26,41 +26,39 @@ a{
   transform: translateY(-50%);
   margin-top: 5rem;
 }
-h1{
+h1 {
   color: (110, 110, 110);
   text-align: center;
-  font-family: 'Lilita One';
+  font-family: "Lilita One";
 }
-.title{
+.title {
   margin-top: -18vh;
 }
-.widget1{
+.widget1 {
   color: (110, 110, 110);
   text-align: right;
-  font-family: 'Lato';
+  font-family: "Lato";
   margin-top: -29vh;
   font-size: xx-large;
   float: left;
 }
-.widget2{
+.widget2 {
   color: (110, 110, 110);
   text-align: left;
   margin-top: -24vh;
   float: left;
-  font-family: 'Sue Ellen Francisco';
+  font-family: "Sue Ellen Francisco";
   font-size: xx-large;
 }
 
-h4{
+h4 {
   color: (110, 110, 110);
   text-align: center;
-  font-family: 'Lilita One';
+  font-family: "Lilita One";
 }
-.links{
+.links {
   float: right;
 }
-
-
 
 /* Front page split picture */
 .figure {
@@ -103,31 +101,27 @@ h4{
   transform: rotateX(90deg) translateY(-50%);
 }
 
-
-
 /* zip code box */
 .input,
 .submit {
-    display: inline-block;
-    padding: 10px 15px;
-    font-size: 20px;
-    border-radius: 0;
-    -webkit-appearance: none;
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 20px;
+  border-radius: 0;
+  -webkit-appearance: none;
 }
 
 .input {
-    border: 1px solid lightgray;
+  border: 1px solid lightgray;
 }
 
 .submit {
-    background-color: #dee4de;
-    border: 1px solid transparent;
+  background-color: #dee4de;
+  border: 1px solid transparent;
 }
-.submit::-moz-focus-inner { 
-    border: 0;
+.submit::-moz-focus-inner {
+  border: 0;
 }
-
-
 
 /* Spinning Widget */
 .text {
@@ -164,4 +158,135 @@ h4{
 .letter.in {
   transform: rotateX(0deg);
   transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+/* stylesheet for login/signup */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  /* color: #666; */
+  text-decoration: none;
+}
+
+a:hover {
+  color: #4fda8c;
+}
+body {
+  color: #666;
+  background-color: #f1f2f2;
+}
+
+.form-wrap {
+  background-color: #fff;
+  width: 320px;
+  margin: 3em auto;
+  box-shadow: 0px 1px 8px #bebebe;
+  -webkit-box-shadow: 0px 1px 8px #bebebe;
+  -moz-box-shadow: 0px 1px 8px #bebebe;
+}
+.form-wrap .tabs {
+  overflow: hidden;
+}
+.form-wrap .tabs h3 {
+  float: left;
+  width: 50%;
+}
+.form-wrap .tabs h3 a {
+  padding: 0.5em 0;
+  text-align: center;
+  font-weight: 400;
+  background-color: #e6e7e8;
+  display: block;
+  color: #666;
+}
+.form-wrap .tabs h3 a.active {
+  background-color: #fff;
+}
+.form-wrap .tabs-content {
+  padding: 1.5em;
+}
+.form-wrap .tabs-content div[id$="tab-content"] {
+  display: none;
+}
+.form-wrap .tabs-content .active {
+  display: block !important;
+}
+.form-wrap form .input {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  color: inherit;
+  font-family: inherit;
+  padding: 0.8em 0 10px 0.8em;
+  border: 1px solid #cfcfcf;
+  outline: 0;
+  display: inline-block;
+  margin: 0 0 0.8em 0;
+  padding-right: 2em;
+  width: 100%;
+}
+.form-wrap form .button {
+  width: 100%;
+  padding: 0.8em 0 10px 0.8em;
+  background-color: #28a55f;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+.form-wrap form .button:hover {
+  background-color: #4fda8c;
+}
+.form-wrap form .checkbox {
+  visibility: hidden;
+  padding: 20px;
+  margin: 0.5em 0 1.5em;
+}
+.form-wrap form .checkbox:checked + label:after {
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
+  opacity: 1;
+}
+.form-wrap form label[for] {
+  position: relative;
+  padding-left: 20px;
+  cursor: pointer;
+}
+.form-wrap form label[for]:before {
+  content: "";
+  position: absolute;
+  border: 1px solid #cfcfcf;
+  width: 17px;
+  height: 17px;
+  top: 0px;
+  left: -14px;
+}
+.form-wrap form label[for]:after {
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  opacity: 0;
+  content: "";
+  position: absolute;
+  width: 9px;
+  height: 5px;
+  background-color: transparent;
+  top: 4px;
+  left: -10px;
+  border: 3px solid #28a55f;
+  border-top: none;
+  border-right: none;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.form-wrap .help-text {
+  margin-top: 0.6em;
+}
+.form-wrap .help-text p {
+  text-align: center;
+  font-size: 14px;
 }
