--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -264,3 +264,21 @@ body {
   text-align: center;
   font-size: 14px;
 }
+
+
+
+#map {
+  height: 50%;
+  width: 50%;
+  margin: auto;
+  margin-top: 10%;
+}
+.map1{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 90%;
+  transform: translate(-50%, -50%);
+  background: rgb(245, 230, 218);
+}
